tests/error/modifier_errors/power_no_arg.py
from guppylang.decorator import guppy


@guppy
def test() -> None:
    with power():
        pass


test.compile()
